# K-GEF

./: Cargo.toml  README.md  makefile
.github/workflows/: ci.yml  release.yml
crates/fwapi/: Cargo.toml
crates/fwcli/: Cargo.toml
crates/fwcore/: Cargo.toml
crates/fwgraph/: Cargo.toml
ghidra-scripts/: export_fw.py
neo4j/: schema.cypher
src/: analysis.rs  firmware.rs  graph.rs  lib.rs  main.rs  neo4j.rs  queries.rs  semantic.rs
