[workspace]
members = [
    "crates/fwcore",
    "crates/fwgraph",
    "crates/fwcli",
    "crates/fwapi",
]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
walkdir = "2.0"
goblin = "0.8"  
petgraph = "0.6"  
neo4rs = "0.12"  
clap = { version = "4.0", features = ["derive"] }  
axum = "0.7"  
tracing = "0.1"
tracing-subscriber = "0.3"
