[package]
name = "K-GEF"
version = "0.0.1"
edition = "2024"
description = "Knowledge-Graph driven Firmware Analysis"

[[bin]]
name = "kgef"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.0"
goblin = "0.8"
petgraph = "0.6"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.12.2"
neo4rs = "0.8.0"
