[package]
name = "fwcli"
version = "0.0.1"
edition = "2024"
description = "CLI for firmware analysis pipeline"
publish = false

[[bin]]
name = "fwcli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
fwcore = { path = "../fwcore" }
fwgraph = { path = "../fwgraph" }
tokio = { workspace = true }
tracing = { workspace = true }
