[package]
name = "fwcore"
version = "0.0.1"
edition = "2024"
description = "unpack, index, analyze, semantic tagging"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
goblin = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
