[package]
name = "fwgraph"
version = "0.0.1"
edition = "2024"
description = "petgraph + Neo4j sync"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
petgraph = { workspace = true }
neo4rs = { workspace = true }
tracing = { workspace = true }
